"Fix" discussion on narrow screens, and hole in af-dh-blocker.
The scare quotes are because the fix is just to set a min-width so the
discussion scroller will just overflow-scroll before it squishes *too*
uncomfortably.

--- a/ClientApp/src/components/Discussion/Discussion.css
+++ b/ClientApp/src/components/Discussion/Discussion.css
@@ -1,15 +1,16 @@
 
 .af-discuss-section {
+    min-width: 320px;
 }
 
 .af-dh-outer {
     position: sticky;
-    top: 3.5rem;
+    top: 3.45rem;
     width: 100%;
 }
 
 .af-dh-blocker {
-    height: 1rem;
+    height: 1.05rem;
     position: relative;
     background-color: white;
 }
